<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose">Choose</string>
    <string name="save">Save</string>
    <string name="message">Message</string>
    <string name="event">Event</string>
    <string name="sound">Sound</string>

    <string-array name="event_array">
        <item>Rain</item>
        <item>Snow</item>
    </string-array>
    <string name="location_input">Location</string>
    <string name="map_radioBtn">Map</string>
    <string name="gps_radioBtn">GPS</string>
    <string name="temp_unit">Temperature unit</string>
    <string name="temp_celsius_radioBtn">Celsius (°C)</string>
    <string name="temp_kelvin_radioBtn">Kelvin (°K)</string>
    <string name="temp_fahrenheit_radioBtn">Fahrenheit (°F)</string>
    <string name="meter_radioBtn">meter/sec</string>
    <string name="mile_radioBtn">mile/sec</string>
    <string name="language">Language</string>
    <string name="arabic_radioBtn">Arabic</string>
    <string name="english_radioBtn">English</string>
    <string name="Country_name">Country</string>
    <string name="country_temp">%s\u00BA</string>
    <string name="country_status">Status</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_Channel_ID">notification_app</string>
    <string name="Confirm">Confirm</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>

    <string name="rain">Rain</string>
    <string name="snow">Snow</string>
    <string name="cloud">Cloud</string>
    <string name="clear">Clear Sky</string>
    <string name="wind">Wind</string>
    <string name="thunder_storm">Thunder storm</string>
    <string name="mist_fog">Mist / Fog</string>
    <string name="my_trip_day">My trip day</string>
    <string name="description">Description</string>
    <string name="select_time">Please Select Time</string>
    <string name="set_alarm">Set alarm</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="date_and_time">Date and time</string>
    <string name="set_exact_alarm">Set exact alarm</string>
    <string name="set_description">Set Description</string>
    <string name="type">Type</string>
    <string name="set_date_and_time">Set Date and Time</string>
    <string name="gps">GPS</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="wind_unit">Wind unit</string>
    <string name="arabic">Arabic</string>
    <string name="c">C° - Meter/Sec</string>
    <string name="f">F° - Meter/Sec</string>
    <string name="k">K° - Mile/Hour</string>
    <string name="cancel">Cancel</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="mile_sec">Mile/sec</string>
    <string name="uvi">UVI: %s</string>
    <string name="todo">TODO</string>
    <string name="details">Details</string>
    <string name="hours">Hours</string>
    <string name="_7_days">7-Days</string>
    <string name="location">Location</string>


    <string-array name="alarm_type">
        <item>@string/rain</item>
        <item>@string/snow</item>
        <item>@string/cloud</item>
        <item>@string/clear</item>
        <item>@string/thunder_storm</item>
        <item>@string/mist_fog</item>
    </string-array>

    <string-array name="units">
        <item>@string/c</item>
        <item>@string/f</item>
        <item>@string/k</item>
    </string-array>
</resources>