<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bottom_sheet">
    <View
        android:id="@+id/view6"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgWindUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6">

        <RadioButton
            android:id="@+id/rbmeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meter_sec" />

        <RadioButton
            android:id="@+id/rbMile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mile_sec" />

    </RadioGroup>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/rgWindUnit"
        app:layout_constraintStart_toStartOf="@+id/rgWindUnit"
        app:layout_constraintTop_toBottomOf="@+id/rgWindUnit" />
</androidx.constraintlayout.widget.ConstraintLayout>