<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AlertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtMessage"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/trans_round_rect"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/event"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/txtMessage" />

        <Spinner
            android:id="@+id/spinnerEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:entries="@array/event_array"
            android:spinnerMode="dialog"
            app:layout_constraintBottom_toBottomOf="@+id/textView20"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sound"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/btnMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableLeft="@drawable/music"
            android:text="@string/choose"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/textView21"
            app:layout_constraintStart_toEndOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="@+id/textView21" />

        <Button
            android:id="@+id/set_alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Set alarm"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/btnMusic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />







    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>