<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/gpsSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/gps"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tempUnitContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/gpsSwitch"
            app:layout_constraintStart_toStartOf="@+id/gpsSwitch"
            app:layout_constraintTop_toBottomOf="@+id/gpsSwitch">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/temperature_unit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windUnitContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/tempUnitContainer"
            app:layout_constraintStart_toStartOf="@+id/tempUnitContainer"
            app:layout_constraintTop_toBottomOf="@+id/tempUnitContainer">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/wind_unit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/languageContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/windUnitContainer"
            app:layout_constraintStart_toStartOf="@+id/windUnitContainer"
            app:layout_constraintTop_toBottomOf="@+id/windUnitContainer">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/arabic" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>