<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="alarmVM"
            type="com.happycomp.weatherforecast.viewmodel.AlarmVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.AlarmActivity"
        android:background="@drawable/weatherback">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/background_border">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">


                <ImageButton
                    android:id="@+id/set_exact_alarm"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    app:tint="@color/teal_700"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                   android:background="@drawable/settings_background"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioGroup
                            android:id="@+id/rgType1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rbRain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rain"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                            <RadioButton
                                android:id="@+id/rbSnow"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/snow"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                            <RadioButton
                                android:id="@+id/rbCloud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cloud"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>
                        </RadioGroup>


                        <RadioGroup
                            android:id="@+id/rgType2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rbClear"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clear"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                            <RadioButton
                                android:id="@+id/rbThunder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/thunder_storm"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>

                            <RadioButton
                                android:id="@+id/rbMistOrFogRB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mist_fog"
                                android:textColor="@color/white"
                                android:textSize="16sp"/>
                        </RadioGroup>

                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_description"
                        android:text="@={alarmVM.desc}"
                        android:minLines="3"
                        android:textColor="@color/white"
                        android:paddingTop="16dp"
                        android:maxLength="150"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/dateAndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{alarmVM.time}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/set_exact_alarm"
                    app:layout_constraintEnd_toStartOf="@+id/set_exact_alarm"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <TextView
                    android:id="@+id/tvSelectedLocatioon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{alarmVM.address}"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnLocation"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="@+id/btnLocation" />

                <ImageButton
                    android:id="@+id/btnLocation"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/teal_700"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="@+id/set_exact_alarm"
                    app:layout_constraintTop_toBottomOf="@+id/set_exact_alarm" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>